# sending_emails_via_broker

./: README.md  connect.py  consumer.py  models.py  producer.py  pyproject.toml
